# crash_prediction

./: .gitignore  LICENSE  Makefile  README.md  Snakefile  requirements.txt  setup.cfg
config/: slurm_cluster.yaml  slurm_cluster_knn.yaml
nesi/: template_kernel.json  template_wrapper.bash
notebooks/: 01_explore_cas.html  01_explore_cas.ipynb  01_explore_cas.py  02_crash_severity.html  02_crash_severity.ipynb  02_crash_severity.py  03_dynamic_map.ipynb  03_dynamic_map.py
results/summary/: scores.csv
src/: nb_explore.py
src/crash_prediction/: cas_data.py  dask_cluster.py  evaluate.py  linear_model.py  models.py  sklearn_models.py  visualize.py
src/notebooks/: 01_explore.py
