[metadata]
name = crash_prediction
version = 0.2.0
description = Explore car crash prediction using NZTA Crash Analysis System data
author = Maxime RIO
author_email = maxime.rio@niwa.co.nz

[options]
packages = find:
package_dir =
    =src
install_requires =
    requests
    pandas
    matplotlib
    seaborn
    contextily
    defopt
    scikit-learn
    joblib
    dask
    distributed
    dask-jobqueue

[options.packages.find]
include =
    src

[options.entry_points]
console_scripts =
    cas_data = crash_prediction.cas_data:main
    sklearn_models = crash_prediction.sklearn_models:main
    evaluate = crash_prediction.evaluate:main

[options.extras_require]
dev =
    black
    flake8
    ipykernel
    jupytext
    nbconvert
    snakemake

[flake8]
max-line-length = 88
